--- a/versions/changelog.txt
+++ b/versions/changelog.txt
@@ -1,5 +1,11 @@
 # RPG Mod Changelog
 
+## v1.2.0.0
+- Полностью переработан пользовательский интерфейс: HUD, экраны характеристик и настроек (добавлен стекломорфизм, новые анимации и карусель из карт Таро для выбора стихии).
+- Упразднен AbilityView, создан единый интерфейс способностей `IAbility` для стандартизации работы всех активных навыков.
+- Улучшена логика работы анимаций перезарядки (cooldown), теперь она корректно поддерживается всеми магическими заклинаниями в HUD.
+- Обновлен рабочий процесс AI-агента (analyze-project).
+
 ## v1.0.0
 - Добавлена система автоматического обновления версий и генерации списка изменений.
 - Реализована поддержка двух языков (EN/RU) для команды `/rpg help`.
