--- a/versions/changelog.txt
+++ b/versions/changelog.txt
@@ -1,21 +1,37 @@
-# RPG Mod Changelog
-
-## v1.2.0.0
-- Полностью переработан пользовательский интерфейс: HUD, экраны характеристик и настроек (добавлен стекломорфизм, новые анимации и карусель из карт Таро для выбора стихии).
-- Упразднен AbilityView, создан единый интерфейс способностей `IAbility` для стандартизации работы всех активных навыков.
-- Улучшена логика работы анимаций перезарядки (cooldown), теперь она корректно поддерживается всеми магическими заклинаниями в HUD.
-- Обновлен рабочий процесс AI-агента (analyze-project).
-
-## v1.0.0
-- Добавлена система автоматического обновления версий и генерации списка изменений.
-- Реализована поддержка двух языков (EN/RU) для команды `/rpg help`.
-- Переработана команда `/rpg reset`: добавлено разделение по игрокам и принудительная очистка пользовательских клавиш клиента через S2C пакеты.
-- Исправлены баги с назначением клавиш в `SettingsScreen` (теперь можно переназначать на кнопки мыши).
-- Переработано Древо Магии: удалена зависимость от ноды 'Mastery', базовые стихийные заклинания стали корнями древа (Tier 0).
-- Создан подробный гайд по основному циклу игры, расположенный в `Guides/mod_guide.txt`.
-- Добавлены навыки автоматизации агента `github-auto-commit` и `skill-creator`.
+# RPG Mod — Список изменений
 
 
-## v1.1.0.0
-- В интерфейс (HUD) добавлена анимация перезарядки (cooldown), затемняющая иконку навыка сверху вниз с отображением таймера в секундах.
-- Исправлен интерфейс Настроек: починен скролл и корректно отображаются кнопки для назначения горячих клавиш выученных навыков.
+## [v2.0.0]
+- Добавлен HUD кулдаунов и стамины в левом нижнем углу экрана
+- Добавлена структура мода: Полосатый Храм (Striped Temple) 
+- Полностью переработано меню "Настройки" для мода и радиальное дерево Магии
+- Доработана локализация для всех физических и магических навыков
+- Изменен подход к координатам хитбокса в UI для корректного масштабирования и кликов
+- Появились характеристики Урона / Силы / Лечения, отображающиеся в меню прокачки
+- Переработано Древо Магии: базовые заклинания — корни древа (Tier 0)
+- Создан гайд по игровому циклу (`Guides/guide.txt`)
+
+## [v1.3.0]
+- ООП-рефакторинг: `AbstractAbility` с generic Builder, объединяющий `Ability` и `MagicAbility`
+- Единый `AbilityRegistry` (объединил `AbilityRegistry` + `MagicSkillRegistry`)
+- Объединены сетевые пакеты: `USE_ABILITY` + `USE_MAGIC_SKILL` → один пакет
+- Единая карта `skillLevels` в `PlayerStatsData` с миграцией NBT
+- Обновлены все экраны и HUD для единого API
+- Удалён `MagicSkillRegistry.java`
+
+## [v1.2.0]
+- Полный редизайн UI: стекломорфизм, анимации, карусель карт Таро для выбора стихии
+- Создан интерфейс `IAbility` для стандартизации всех способностей
+- Кулдауны корректно работают для всех магических заклинаний в HUD
+
+## [v1.1.0]
+- HUD: анимация перезарядки (cooldown) — затемнение иконки сверху вниз + таймер
+- Настройки: исправлен скролл, корректные кнопки биндинга клавиш
+
+## [v1.0.0]
+- Изменена архитектура: характеристики (урон, мана, стамина, кулдаун) теперь вынесены в отдельные классы (например `HealStat`, `MaxManaStat`) в пакете `stats`.
+- Добавлена новая команда `/rpg <add/remove/set> <игрок> <характеристика> <значение>` для управления индивидуальными характеристиками (работает с PlayerStatsData).
+- Система автообновления версий и генерации changelog
+- Двуязычная поддержка (EN/RU) для `/rpg help`
+- Переработка `/rpg reset`: разделение по игрокам, очистка клиентских клавиш через S2C пакеты
+- Исправлен биндинг клавиш в настройках (включая кнопки мыши)
