--- a/versions/changelog.txt
+++ b/versions/changelog.txt
@@ -1,9 +1,15 @@
 # RPG Mod — Список изменений
 
 
+## [v2.1.0]
+- Внедрены новые характеристики: Сила, Ловкость, Живучесть, Интеллект и Маг. Сила. Убраны старые.
+- Добавлена система Защиты (Defense), снижающая получаемый урон на процент, зависящий от Живучесть.
+- Итоговые статы вынесены в отдельную новую вкладку «Билд» (Build) в меню прокачки.
+- Проведено масштабное ООП-рефакторирование способностей (исправлен расчет скейлингов урона и кулдаунов в зависимости от статов игрока).
+- Обновлены и актуализированы внутриигровые гайды.
+
 ## [v2.0.0]
 - Добавлен HUD кулдаунов и стамины в левом нижнем углу экрана
-- Добавлена структура мода: Полосатый Храм (Striped Temple) 
 - Полностью переработано меню "Настройки" для мода и радиальное дерево Магии
 - Доработана локализация для всех физических и магических навыков
 - Изменен подход к координатам хитбокса в UI для корректного масштабирования и кликов
